tests/whiley/valid/test_1354.wyal
assert "index out of bounds (not less than length)":
    forall(int[] x):
        if:
            x == [2]
        then:
            0 < |x|


