tests/whiley/invalid/test_6.wyal
assert "index out of bounds (not less than length)":
    forall(int[] x):
        if:
            true
        then:
            0 < |x|


